--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/daiconnnnnnn/fossa-test2#readme",
   "dependencies": {
-    "express": "4.17.1"
+    "express": "4.17.1",
+    "apache-crypt": "1.2.4"
   }
 }
