--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/daiconnnnnnn/fossa-test2#readme",
   "dependencies": {
     "express": "4.17.1",
-    "lodash": "4.17.20"
+    "lodash": "4.17.20",
+    "apache-crypt": "1.2.4"
   }
 }
